gccida/c3/get_attr_athlon_fpunits
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12028:1: error: must use 'enum' tag to refer to type 'attr_athlon_fpunits'
attr_athlon_fpunits  get_attr_athlon_fpunits( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12031:1: error: must use 'enum' tag to refer to type 'attr_athlon_fpunits'
attr_athlon_fpunits v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12037:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12041:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12053:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12055:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 11973, "get_attr_athlon_fpunits"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12055:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 11973, "get_attr_athlon_fpunits"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12101:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( register_operand( recog_data_0.operand[1], SImode) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12104:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( immediate_operand( recog_data_0.operand[1], VOIDmode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12127:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( register_operand( recog_data_0.operand[1], SImode) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12130:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( immediate_operand( recog_data_0.operand[1], VOIDmode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12156:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !register_operand( recog_data_0.operand[1], SImode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12157:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return 3 * ( immediate_operand( recog_data_0.operand[1], VOIDmode) == 0) + 1; 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12196:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( register_operand( recog_data_0.operand[1], SImode) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12199:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( immediate_operand( recog_data_0.operand[1], VOIDmode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12221:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( register_operand( recog_data_0.operand[1], SImode) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12224:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !immediate_operand( recog_data_0.operand[1], VOIDmode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12275:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v13 = recog_data_0.operand[3]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/insn-attrtab.c:12283:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], SFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_athlon_fpunits/src/obj/insn-attrtab.o] Error 1
